--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -2,7 +2,7 @@ config:
   credentials: []
   project_repos:
     github.com/EOSC-synergy/sqaaas-tooling:
-      branch: release/1.7.8
+      branch: release/1.7.9
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
     github.com/stevenjgibbons/LEOPACK-2022-revision:
       branch: main
@@ -15,32 +15,32 @@ sqa_criteria:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision git:
         commands:
-        - /usr/bin/env sh .sqa/script.droopy-cerulean-capuchin.sh
-        container: qc.acc_wimpy-wheat-chihuahua
+        - /usr/bin/env sh .sqa/script.grumpy-heliotrope-dolphin.sh
+        container: qc.acc_nerdy-olive-rattlesnake
   QC.Doc:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.bluesy-pear-hedgehog.sh
-        container: qc.doc_sunny-lilac-cattle
+        - /usr/bin/env sh .sqa/script.beady-viridian-nightingale.sh
+        container: qc.doc_tasty-maroon-loon
       github.com/stevenjgibbons/LEOPACK-2022-revision git:
         commands:
-        - /usr/bin/env sh .sqa/script.baggy-seashell-barracuda.sh
-        container: qc.doc_ugly-thistle-termite
+        - /usr/bin/env sh .sqa/script.craggy-saffron-indri.sh
+        container: qc.doc_scaly-wisteria-uakari
       github.com/stevenjgibbons/LEOPACK-2022-revision markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.freaky-linen-gar.sh
-        container: qc.doc_homely-violet-javanese
+        - /usr/bin/env sh .sqa/script.seedy-lavender-cuttlefish.sh
+        container: qc.doc_shaggy-tomato-beetle
   QC.Lic:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.woolly-pink-cougar.sh
-        container: qc.lic_cloudy-lime-whippet
+        - /usr/bin/env sh .sqa/script.chewy-zucchini-boar.sh
+        container: qc.lic_cheeky-zucchini-balinese
   QC.Ver:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.skinny-white-angora.sh
-        container: qc.ver_snazzy-cyan-badger
+        - /usr/bin/env sh .sqa/script.nippy-sapphire-buffalo.sh
+        container: qc.ver_cheeky-taupe-crane
 timeout: 5400
