--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -15,32 +15,38 @@ sqa_criteria:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision git:
         commands:
-        - /usr/bin/env sh .sqa/script.grumpy-heliotrope-dolphin.sh
-        container: qc.acc_nerdy-olive-rattlesnake
+        - /usr/bin/env sh .sqa/script.pasty-ecru-newfoundland.sh
+        container: qc.acc_sleazy-lilac-birman
   QC.Doc:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.beady-viridian-nightingale.sh
-        container: qc.doc_tasty-maroon-loon
+        - /usr/bin/env sh .sqa/script.nerdy-flax-sparrow.sh
+        container: qc.doc_cloudy-apricot-anteater
       github.com/stevenjgibbons/LEOPACK-2022-revision git:
         commands:
-        - /usr/bin/env sh .sqa/script.craggy-saffron-indri.sh
-        container: qc.doc_scaly-wisteria-uakari
+        - /usr/bin/env sh .sqa/script.stuffy-gold-toucan.sh
+        container: qc.doc_trippy-flax-turtle
       github.com/stevenjgibbons/LEOPACK-2022-revision markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.seedy-lavender-cuttlefish.sh
-        container: qc.doc_shaggy-tomato-beetle
+        - /usr/bin/env sh .sqa/script.wheezy-chestnut-hippopotamus.sh
+        container: qc.doc_cranky-amaranth-lobster
   QC.Lic:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.chewy-zucchini-boar.sh
-        container: qc.lic_cheeky-zucchini-balinese
+        - /usr/bin/env sh .sqa/script.hazy-khaki-hornet.sh
+        container: qc.lic_sloppy-tomato-quokka
+  QC.Met:
+    repos:
+      github.com/stevenjgibbons/LEOPACK-2022-revision cff-converter-python:
+        commands:
+        - /usr/bin/env sh .sqa/script.wheezy-buff-caiman.sh
+        container: qc.met_zippy-periwinkle-emu
   QC.Ver:
     repos:
       github.com/stevenjgibbons/LEOPACK-2022-revision get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.nippy-sapphire-buffalo.sh
-        container: qc.ver_cheeky-taupe-crane
+        - /usr/bin/env sh .sqa/script.bluesy-azure-flamingo.sh
+        container: qc.ver_gimpy-jade-lionfish
 timeout: 5400
